feat(scheduler): add standard page filters
